2017-06-01  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-misc-pkgs.el (crontab-mode): bring simple modes together; prepare to separate in own file & eliminate batch, yaml, etc

2017-05-10  Stephen Jenkins  <stephenearljenkins@gmail.com>

        * init-misc-pkgs.el: add bookmark+
        add rpn-calc


2017-05-09  Stephen Jenkins  <stephenearljenkins@gmail.com>

        * init-bindings-settings.el:  rename file to init-bindings-settings.el

        * init-look-and-feel.el: add keybindings from emacs-starter-kit