@@ -20,7 +20,7 @@
     ("#CC9393" "#DFAF8F" "#F0DFAF" "#7F9F7F" "#BFEBBF" "#93E0E3" "#94BFF3" "#DC8CC3")))
  '(package-selected-packages
    (quote
-    (helm-projectile cyberpunk-theme whole-line-or-region visible-mark ido-imenu help-fns+ help-fns+\.el framemove company-anaconda anaconda-mode pip-requirements php-mode smarty-mode csv-nav csv-mode whitespace-cleanup-mode textile-mode crontab-mode guide-key magit-gh-pulls github-issues github-clone bug-reference-github yagist git-messenger fullframe git-timemachine gitconfig-mode gitignore-mode git-blamed browse-at-remote nlinum indent-guide ivy-historian uniquify diredful dired dired-sort dired+ scratch wgrep-ag uptimes rpn-calc bookmark+ flycheck-color-mode-line gist zenburn-theme yasnippet yaml-mode writegood-mode which-key volatile-highlights use-package thesaurus sunrise-x-loop smex shell-pop rainbow-delimiters pyvenv python-mode pyenv-mode-auto org-dashboard org-cliplink org-bullets markdown-mode magithub macrostep log4e load-dir jedi ido-ubiquitous ido-at-point goto-chg google-this golden-ratio furl frame-cmds flycheck-pos-tip flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff dired-toggle-sudo dired-ranger dired-rainbow dired-open dired-narrow dired-launch diff-hl deft dashboard crux counsel company-shell company-quickhelp company-jedi company-irony browse-kill-ring beacon batch-mode bash-completion avy arduino-mode aggressive-indent ag)))
+    (mode-icons helm-projectile cyberpunk-theme whole-line-or-region visible-mark ido-imenu help-fns+ help-fns+\.el framemove company-anaconda anaconda-mode pip-requirements php-mode smarty-mode csv-nav csv-mode whitespace-cleanup-mode textile-mode crontab-mode guide-key magit-gh-pulls github-issues github-clone bug-reference-github yagist git-messenger fullframe git-timemachine gitconfig-mode gitignore-mode git-blamed browse-at-remote nlinum indent-guide ivy-historian uniquify diredful dired dired-sort dired+ scratch wgrep-ag uptimes rpn-calc bookmark+ flycheck-color-mode-line gist zenburn-theme yasnippet yaml-mode writegood-mode which-key volatile-highlights use-package thesaurus sunrise-x-loop smex shell-pop rainbow-delimiters pyvenv python-mode pyenv-mode-auto org-dashboard org-cliplink org-bullets markdown-mode magithub macrostep log4e load-dir jedi ido-ubiquitous ido-at-point goto-chg google-this golden-ratio furl frame-cmds flycheck-pos-tip flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff dired-toggle-sudo dired-ranger dired-rainbow dired-open dired-narrow dired-launch diff-hl deft dashboard crux counsel company-shell company-quickhelp company-jedi company-irony browse-kill-ring beacon batch-mode bash-completion avy arduino-mode aggressive-indent ag)))
  '(pdf-view-midnight-colors (quote ("#DCDCCC" . "#383838")))
  '(vc-annotate-background "#2B2B2B")
  '(vc-annotate-color-map
