@@ -1,3 +1,13 @@
+2017-06-12  Stephen Jenkins  <stephenearljenkins@gmail.com>
+
+	* init-misc-pkgs.el (mode-icons): add mode-icons
+
+	* init-git.el: add font-awesome git icon
+
+2017-06-05  Stephen Jenkins  <stephenearljenkins@gmail.com>
+
+	* move mu4e.el to archive
+
 2017-06-01  Stephen Jenkins  <stephenearljenkins@gmail.com>
 
 	* init-misc-pkgs.el (crontab-mode): bring simple modes together; prepare to separate in own file & eliminate batch, yaml, etc
